--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <div class="container">
       <h1>PWA Example Project</h1>
       <h2 id="time">loading...</h2>
+      <button id="push-noti">Push notification 10 sec.</button>
     </div>
     <script>
       if ('serviceWorker' in navigator) {
@@ -43,7 +44,6 @@
       }
 
       else if (Notification.permission === 'granted') {
-        console.log('granted')
         const notification = new Notification("Hello", {
           body: 'This is push notification.',
           icon: 'logo.png',
@@ -51,7 +51,6 @@
       }
     
       else if (Notification.permission !== 'denied' || Notification.permission === 'default') {
-        console.log('default')
         Notification.requestPermission(permission => {
           if (permission === 'granted') {
             const notification = new Notification("Welcome", {
