step 1 : add web app manifest

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,26 @@
 <html lang="en">
-  <title>PWA - Example Project</title> 
+  <title>PWA - Example Project</title>
   <link rel="manifest" href="manifest.json">
   
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="PWA Example">
-  <meta name="apple-mobile-web-app-title" content="PWA Example">
-  <meta name="theme-color" content="#9EE073">
-  <meta name="msapplication-navbutton-color" content="#9EE073">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="msapplication-starturl" content="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  <link rel="icon" type="image/png" sizes="512x512" href="assets/images/logo.png">
-  <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="assets/images/logo.png">
-  <link rel="icon" href="assets/images/logo.png">
-  <link rel="apple-touch-icon" href="assets/images/logo.png">
-  <link rel="icon" sizes="180x180" href="assets/images/logo.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo.png">
-  <link rel="icon" sizes="144x144" href="assets/images/logo.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/images/logo.png">
+  <link rel="icon" sizes="16x16" href="/assets/images/icons/icon-16x16.png">
+  <link rel="apple-touch-icon" sizes="16x16" href="/assets/images/icons/icon-16x16.png">
+  <link rel="icon" sizes="24x24" href="/assets/images/icons/icon-24x24.png">
+  <link rel="apple-touch-icon" sizes="24x24" href="/assets/images/icons/icon-24x24.png">
+  <link rel="icon" sizes="32x32" href="/assets/images/icons/icon-32x32.png">
+  <link rel="apple-touch-icon" sizes="32x32" href="/assets/images/icons/icon-32x32.png">
+  <link rel="icon" sizes="64x64" href="/assets/images/icons/icon-64x64.png">
+  <link rel="apple-touch-icon" sizes="64x64" href="/assets/images/icons/icon-64x64.png">
+  <link rel="icon" sizes="128x128" href="/assets/images/icons/icon-128x128.png">
+  <link rel="apple-touch-icon" sizes="128x128" href="/assets/images/icons/icon-128x128.png">
+  <link rel="icon" sizes="256x256" href="/assets/images/icons/icon-256x256.png">
+  <link rel="apple-touch-icon" sizes="256x256" href="/assets/images/icons/icon-256x256.png">
+  <link rel="icon" sizes="512x512" href="/assets/images/icons/icon-512x512.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="/assets/images/icons/icon-512x512.png">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -54,7 +55,7 @@
   
         </div>
       </div>
-      <div class="parallax"><img src="assets/images/background1.jpg" alt="Unsplashed background img 1"></div>
+      <div class="parallax"><img src="/assets/images/background1.jpg" alt="Unsplashed background img 1"></div>
     </div>
   
   
@@ -103,7 +104,7 @@
           </div>
         </div>
       </div>
-      <div class="parallax"><img src="assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
+      <div class="parallax"><img src="/assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
     </div>
   
     <div class="container">
@@ -129,7 +130,7 @@
           </div>
         </div>
       </div>
-      <div class="parallax"><img src="assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
+      <div class="parallax"><img src="/assets/images/background3.jpg" alt="Unsplashed background img 3"></div>
     </div>
   
     <footer class="page-footer teal">
