--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <link rel="apple-touch-icon" sizes="512x512" href="/assets/images/icons/icon-512x512.png">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="/assets/css/materialize.min.css">
   <link rel="stylesheet" href="/assets/css/app.css">
   <body>
     <nav class="white" role="navigation">
@@ -169,8 +169,8 @@
       </div>
     </footer>
   
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>    
+    <script src="/assets/js/jquery-2.1.1.min.js"></script>    
+    <script src="/assets/js/materialize.min.js"></script>    
     <script src="/assets/js/app.js"></script>
   </body>
 </html>
